cabal-version:   3.0
name:            haskell-bitcoinrpc
version:         0.1.0.0
description:     Please see the README on GitHub at <https://github.com/stridervc/haskell-bitcoinrpc#readme>
homepage:        https://github.com/stridervc/haskell-bitcoinrpc#readme
bug-reports:     https://github.com/stridervc/haskell-bitcoinrpc/issues
author:          Fred Strauss
maintainer:      fred@strider.co.za
copyright:       2023 Fred Strauss &lt;fred@strider.co.za&gt;
license:         NONE
license-file:    LICENSE
build-type:      Simple

common warnings
    ghc-options: -Wall

library
  import:         warnings
  hs-source-dirs: src
  exposed-modules:
      BitcoinRPC
      BitcoinRPCClient
      Methods.GetBlock
      Methods.GetBlockchainInfo
      Methods.GetBlockCount
      Methods.GetMempoolInfo
      Methods.GetNetworkInfo
      Methods.GetRawMempool
      Methods.GetRawTransaction
      Methods.GetUptime
      RPC
      Types
  other-modules:
      Paths_haskell_bitcoinrpc
  build-depends:
      aeson
    , base >=4.18 && <5
    , bytestring
    , containers
    , http-conduit
    , scientific
    , text
  default-language: Haskell2010
